third_party/WebKit/Source/platform/graphics/filters/SkiaImageFilterBuilder.cpp
@@ -132,10 +132,12 @@ sk_sp<SkImageFilter> BuildBoxReflectFilter(const BoxReflection& reflection,
     // can be serialized.
     SkBitmap bitmap;
     const SkRect mask_record_bounds = reflection.MaskBounds();
-    if (mask_record_bounds.width() * mask_record_bounds.height() <
+    SkRect mask_bounds_rounded;
+    mask_record_bounds.roundOut(&mask_bounds_rounded);
+    if (mask_bounds_rounded.width() * mask_bounds_rounded.height() <
         kMaxMaskBufferSize) {
       bitmap.allocPixels(SkImageInfo::MakeN32Premul(
-          mask_record_bounds.width(), mask_record_bounds.height()));
+          mask_bounds_rounded.width(), mask_bounds_rounded.height()));
       SkiaPaintCanvas canvas(bitmap);
       canvas.clear(SK_ColorTRANSPARENT);
       canvas.translate(-mask_record_bounds.x(), -mask_record_bounds.y());
